<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_resumo"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_resumo" />
        <item
            android:id="@+id/nav_planilha"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_planilha" />
        <item
            android:id="@+id/nav_evolucao"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_evolucao" />
        <item
            android:id="@+id/nav_guia"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_guia" />
    </group>

    <item android:title="@string/accoes">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_person"
                android:title="@string/menu_perfil" />
            <item
                android:id="@+id/nav_gerir_categorias"
                android:icon="@drawable/ic_edit"
                android:title="@string/titulo_gerir_categorias" />
            <item
                android:id="@+id/nav_exportar"
                android:icon="@drawable/ic_export"
                android:title="@string/menu_exportar" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_sair" />
        </menu>
    </item>
</menu>
